AH-2004-02-20-0: Bugfix:    Made libdrmaa.so again a self-contained library 
                            that requires no other Grid Engine libraries to
                            be linked against DRMAA application.
                            Added DRMAA example to default build rule.

AD-2004-02-20-0: Bugfix:    Generate error message if qmaster is already
                            running.
                 Changed:   qmaster, shadowd, daemons/common
                 Review:    CR
                 Issue:     684

EB-2004-02-20-0: Bugfix:    Added missing documentation
                 Issue:     691

SG-2004-02-20-0: Bugfix:    - evaluated 53patches
                            - fixed test 540 for the testsuite
                 Changed:   testsuite
                 Review:    CR

EB-2004-02-20-0: Bugfix:    Soft queue requests are not rejected if queues 
                            are not requestable.
                            qalter -q <queue_pattern_which_will_never_match> 
                            is not rejected.
                 Changed:   sge_qmaster
                 Issue:     688, 689
                 Review:    pending

MD-2004-02-20-0: Bugfix:    - new dialog messages
                 Changed    inst_sgeee, testsuite
                 Issue:     676

JG-2004-02-20-0: Enhancem.: Tune locking parameters of Berkeley DB.

MD-2004-02-19-0: Bugfix:    - wrong perms and owner for bootstrap file
                            - typos
                 Changed:   inst_sgeee, testsuite
                 Issue:     677

JG-2004-02-19-2: Testsuite: Fixed testsuite installation: Use SGE_SINGLE_LINE
                            as introduced by DT-2004-02-19-1 to avoid parsing
                            problems due to splitted long lines.

AD-2004-02-19-2: Cleanup:   Did remove '-lj' command line argument.
                 Changed:   qmaster, common, man

SG-2004-02-19-3: Bugfix:    fixed qstat -s z -r
                 Changed:   qstat
